<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/max"
    android:orientation="vertical"
    tools:context="com.example.andraburuiana.studyandchill.MainActivity">


    <TextView
        android:id="@+id/Now"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/this_activity_represents_the_homepage_which_displays_the_list_of_songs" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/study_chill_choose"
        android:id="@+id/textView2"
        android:textSize="@dimen/dm1"
        android:layout_margin="@dimen/dm2"
        android:fontFamily="casual"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mozart_piano_sonata_no_2_in_f_major_k_280_ii_adagio"
            android:id="@+id/textView3"
            android:textSize="@dimen/dm4"
            android:layout_margin="@dimen/dm5"
            android:fontFamily="cursive"
            android:textColor="#FFFFFF"
            android:onClick="openNowPlaying"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mozart_piano_sonata_no_3_in_b_flat_major_k_281_ii_andante_amoroso"
            android:id="@+id/textView4"
            android:textSize="@dimen/dm6"
            android:layout_margin="@dimen/dm7"
            android:fontFamily="cursive"
            android:textColor="#FFFFFF"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mozart_eine_kleine_nachtmusik"
            android:id="@+id/textView5"
            android:layout_margin="@dimen/dm8"
            android:fontFamily="cursive"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/dm9"
            android:onClick="openNowPlaying"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ella_henderson_mirror_man_alex_adair_remix"
            android:id="@+id/textView6"
            android:layout_margin="@dimen/dm10"
            android:fontFamily="sans-serif-condensed"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/dm11"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/galantis_runaway_henry_land_remix"
            android:textColor="#FFFFFF"
            android:id="@+id/textView7"
            android:layout_margin="@dimen/dm12"
            android:fontFamily="sans-serif-condensed"
            android:textSize="@dimen/dm13"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/duke_dumont_ocean_drive"
            android:id="@+id/textView8"
            android:layout_margin="@dimen/dm14"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/dm15"
            android:fontFamily="sans-serif-condensed"
            />
    </LinearLayout>



</ScrollView>

</LinearLayout>