<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.andraburuiana.studyandchill.BuyActivity"
    android:background="@drawable/max">

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/huge"
    android:layout_alignParentRight="true"
    android:layout_alignParentEnd="true"
    android:id="@+id/textView12" />
    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/do_you_want_to_study_or_to_chill_why_not_both"
        android:textSize="@dimen/d1"
        android:fontFamily="casual"
        android:textColor="#FFFFFF"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/textView12"
        android:layout_alignLeft="@+id/text1"
        android:layout_alignStart="@+id/text1" />

    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/piano_concerto_no_17_in_g_major_k453_i_allegro"
        android:layout_below="@id/text"
        android:layout_margin="@dimen/d3"
        android:textSize="@dimen/d4"
        android:fontFamily="cursive"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/text4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/heartburn"
        android:textSize="@dimen/d6"
        android:fontFamily="sans-serif-condensed"
        android:textColor="#FFFFFF"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/text3"
        android:layout_alignLeft="@+id/text3"
        android:layout_alignStart="@+id/text3" />

    <TextView
        android:id="@+id/text3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/masters_of_classical_music_beethoven_full_album"
        android:textSize="@dimen/d8"
        android:fontFamily="cursive"
        android:textColor="#FFFFFF"
        android:layout_marginTop="54dp"
        android:layout_below="@+id/text1"
        android:layout_alignLeft="@+id/text1"
        android:layout_alignStart="@+id/text1" />

    <TextView
        android:id="@+id/text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clarinet_concerto_movt_2"
        android:textSize="@dimen/d9"
        android:fontFamily="cursive"
        android:textColor="#FFFFFF"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@id/text1"
        android:layout_alignStart="@id/text1" />




        <TextView
            android:id="@+id/text5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="0.60 euro"
            android:layout_alignBottom="@+id/text2"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />



        <TextView
            android:id="@+id/text6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0_70_euro"
            android:layout_alignBottom="@id/text1"
            android:layout_alignRight="@id/text1"
            android:layout_alignEnd="@id/text1" />

        <TextView
            android:id="@+id/text8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_24_euro"
            android:layout_alignBottom="@id/text3"
            android:layout_alignRight="@id/text3"
            android:layout_alignEnd="@id/text3" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0_50_euro"
        android:id="@+id/textView"
        android:layout_alignBaseline="@id/text4"
        android:layout_alignBottom="@id/text4"
        android:layout_alignRight="@id/text3"
        android:layout_alignEnd="@id/text3" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/d10"
        android:background="@drawable/back"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@id/text"
        android:layout_alignStart="@id/text" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/button2"
        android:layout_marginLeft="44dp"
        android:layout_marginStart="44dp"
        android:layout_toEndOf="@id/button2"
        android:layout_toRightOf="@id/button2"
        android:background="@drawable/home"/>

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@id/text5"
        android:layout_alignRight="@id/text5"
        android:layout_alignTop="@id/button3"
        android:background="@drawable/add"/>


</RelativeLayout>